# precellar

./: .buildinfo  .gitignore  Cargo.toml  README.md  api.html  fastq.d  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
.cargo/: config.toml
.doctrees/: api.doctree  install.doctree
.doctrees/_autosummary/: precellar.Assay.add_illumina_reads.doctree  precellar.Assay.chemistry_strandedness.doctree  precellar.Assay.delete_region.doctree  precellar.Assay.doctree  precellar.Assay.id.doctree  precellar.Assay.name.doctree  precellar.Assay.save.doctree  precellar.Assay.to_yaml.doctree  precellar.SeqSpec.doctree  precellar.align.doctree  precellar.aligners.BWAMEM2.doctree  precellar.make_genome_index.doctree  precellar.make_minimap2_index.doctree  precellar.utils.strip_barcode_from_fastq.doctree
.doctrees/tutorials/: 20250221_celseq2.doctree  20250307_scifi.doctree  generic.doctree  index.doctree  txg_multiome.doctree
.github/actions/setup-rust/: action.yml
.github/workflows/: docs.yml  nightly.yml  test_python.yml  wheels.yml
_autosummary/: precellar.Assay.add_illumina_reads.html  precellar.Assay.chemistry_strandedness.html  precellar.Assay.delete_read.html  precellar.Assay.delete_region.html  precellar.Assay.description.html  precellar.Assay.doi.html  precellar.Assay.filename.html  precellar.Assay.html  precellar.Assay.id.html  precellar.Assay.modalities.html  precellar.Assay.name.html  precellar.Assay.save.html  precellar.Assay.sequence_kit.html  precellar.Assay.to_yaml.html  precellar.Assay.update_read.html  precellar.Assay.whitelist.html  precellar.align.html  precellar.aligners.BWAMEM2.html  precellar.aligners.BWAMEM2.logging.html  precellar.aligners.BWAMEM2.max_occurrence.html  precellar.aligners.BWAMEM2.min_seed_length.html  precellar.aligners.STAR.html  precellar.make_bwa_index.html  precellar.make_fastq.html  precellar.make_minimap2_index.html  precellar.utils.bam_to_fastq.html  precellar.utils.extract_barcode_from_name.html  precellar.utils.merge_fastq_files.html  precellar.utils.multiplex_fastq.html  precellar.utils.strip_barcode_from_fastq.html
_sources/: api.rst.txt
_sources/_autosummary/: precellar.Assay.delete_region.rst.txt  precellar.Assay.rst.txt  precellar.Assay.save.rst.txt  precellar.aligners.BWAMEM2.max_occurrence.rst.txt  precellar.make_minimap2_index.rst.txt  precellar.utils.merge_fastq_files.rst.txt
_static/: versions.json
data/: test_1.fastq  test_2.fastq
docs/: api.rst  conf.py  index.rst  install.md
docs/_autosummary/: precellar.Assay.name.rst  precellar.Assay.rst  precellar.aligners.BWAMEM2.min_seed_length.rst  precellar.aligners.BWAMEM2.rst  precellar.make_fastq.rst  precellar.utils.bam_to_fastq.rst
docs/_static/: versions.json
docs/_templates/: layout.html
docs/_templates/autosummary/: class.rst
docs/tutorials/: 20250219_smartseq2_full_pipeline.ipynb  20250219_smartseq_final_run.ipynb  20250221_celseq2.ipynb  20250307_scifi.ipynb  20250309_sci-RNA-3.ipynb  20250311_shareseq.ipynb  20250314_dscATAC.ipynb  generic.ipynb  index.rst  make_seqspec.md  txg_atac.ipynb  txg_multiome.ipynb  txg_rna.ipynb
precellar/: Cargo.toml
precellar/data/: bd_cls1.txt  bd_cls2.txt  bd_cls3.txt  test1.yaml  test2.yaml  test3.yaml  test4.yaml
precellar/src/: adapter.rs  align.rs  barcode.rs  fragment.rs  genome.rs  io.rs  lib.rs  qc.rs  seqspec.rs  utils.rs
precellar/src/align/: aligners.rs  fastq.rs  mod.rs  qc.rs  snv.rs  wrapper.rs
precellar/src/align/aligners/: minimap2.rs
precellar/src/fragment/: de_dups.rs  deduplicate.rs  dedups.rs  mod.rs
precellar/src/long/: barcode_extractor.rs  mod.rs  sequence_aligner.rs
precellar/src/transcript/: annotate.rs  de_dups.rs  mod.rs  quantification.rs  transcriptome.rs  validation_test.rs
precellar/src/transcriptome/: align.rs  annotate.rs  de_dups.rs  mod.rs  quantification.rs
precellar/tests/data/: spec.yaml
precellar/tests/data/human_brain_3k/: spec.yaml
python/: 20250218_gene_matrix_smartseq.h5ad  Cargo.toml  LICENSE  README.md  pyproject.toml
python/src/: align.rs  aligner.rs  aligners.rs  examples.rs  lib.rs  pyseqspec.rs  utils.rs
python/src/utils/: bam.rs  fastq.rs  mod.rs
seqspec/: Cargo.toml
seqspec/src/: lib.rs  read.rs  region.rs  utils.rs
seqspec/src/read/: segment.rs
seqspec_templates/: 10x_atac.yaml  10x_rna_atac.yaml  10x_rna_v1.yaml  10x_rna_v2.yaml  10x_rna_v3.yaml  10x_rna_v4.yaml  HiRES.yaml  bd.yaml  bd_seqspec.yml  dnbelabc4_atac_v1.yaml  dnbelabc4_rna_v1.yaml  dnbelabc4_rna_v1_dark.yaml  droplet_paired_tag.yaml  dscATAC.yaml  dscATAC_seqspec.yaml  generic_atac.yaml  mars_seq.yaml  scNanoATAC.yaml  sci-RNA-3.yaml  sci_rna_seq3.yaml  scifi_atac.yaml  share_seq.yaml  shareseq.yaml  smartseq2.yaml  snare_seq.yaml  test_deep_nested.yaml
seqspec_templates/mars_seq/: mars_seq.yaml
tutorials/: 20250219_smartseq_final_run.html  20250221_celseq2.html  20250307_scifi.html  generic.html  index.html  make_seqspec.html  txg_multiome.html
version/0.1/: .buildinfo  api.html  genindex.html  install.html  objects.inv  search.html  searchindex.js
version/0.1/.doctrees/: api.doctree  environment.pickle
version/0.1/_autosummary/: precellar.SeqSpec.delete_read.html  precellar.SeqSpec.html  precellar.SeqSpec.to_yaml.html  precellar.SeqSpec.update_read.html  precellar.align.html  precellar.make_fragment.html  precellar.make_genome_index.html  precellar.utils.strip_barcode_from_fastq.html
version/0.1/_sources/: api.rst.txt
version/0.1/_static/: versions.json
version/0.1/tutorials/: generic.html
version/0.2/: .buildinfo  api.html  genindex.html  index.html  install.html  objects.inv  searchindex.js
version/0.2/.doctrees/: api.doctree
version/0.2/_autosummary/: precellar.align.html  (+11 more)
version/0.4/: .buildinfo  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
version/0.5/: .buildinfo  api.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
version/dev/: .buildinfo  api.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
(+218 files in other folders)
