[package]
name = "precellar"
version = "0.5.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
anndata = "0.6.2"
anndata-hdf5 = "0.5.2"
bed-utils = { git = "https://github.com/kaizhang/bed-utils.git", rev="c7e7c80c7dcd61afbd6b296ac70552b9f439d9ce" }
bwa-mem2 = { git = "https://github.com/regulatory-genomics/bwa-mem2-rust.git", rev = "27a375ec2239c79e8b3dafc504c1e197832a27bf" }
star-aligner = { git = "https://github.com/regulatory-genomics/star-aligner", rev = "ff62b1d7d6ccbade4396398960ffcb1eb3d629e7" }
minimap2 = { git = "https://github.com/PPSherry/minimap2-rs.git", branch = "feature/paired-end-support" }
smallvec = "1.15"
bstr = "1.12"
itertools = "0.14"
indexmap = "2.11"
log = "0.4"
lexical = "7.0"
nalgebra-sparse = "0.11"
noodles = { version = "0.101", features = ["core", "gtf", "fastq", "bam", "sam", "async"] }
polars = "0.51"
rayon = "1.11"
bitcode = "0.6"
serde_json = "1.0"
seqspec = { workspace = true }
regex = "1.11"
env_logger = "0.11"
rand = "0.9.0"
indicatif = "0.18"
tempfile = "3"
bio = "2.0"
tikv-jemallocator = { version = "0.6", optional = true }

[dev-dependencies]
flate2 = "1.1"

[features]
default = []
jemalloc = ["tikv-jemallocator"]