[package]
name = "precellar-py"
version = "0.3.0-dev0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "precellar"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
bstr = "1.0"
bwa-mem2 = { git = "https://github.com/regulatory-genomics/bwa-mem2-rust.git", rev = "55c37fd36c7fb69b6c4058f11a21ce6ab05e26fe" }
star-aligner = { git = "https://github.com/regulatory-genomics/star-aligner", rev = "4672820b6a2c49ef514f9160e08188928d45a874" }
glob = "0.3"
itertools = "0.13"
noodles = { version = "0.85", features = ["core", "fastq", "bam", "sam", "bgzf"] }
seqspec = { workspace = true }
serde_yaml = "0.9"
termtree = "0.5"
precellar = { workspace = true }
regex = "1.6"
rayon = "1.10"
log = "0.4"
env_logger = "0.11"
url = "2.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
futures = "0.3"

[dependencies.pyo3]
version = "0.22.3"
features = ["extension-module", "anyhow"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = {version = "0.6", features = ["disable_initial_exec_tls"]}