[package]
name = "precellar-py"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "precellar"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
bstr = "1.0"
bwa-mem2 = { git = "https://github.com/regulatory-genomics/bwa-mem2-rust.git", rev = "765dd89560d7522fa72c99827f6fee2498cda38d" }
star-aligner = { git = "https://github.com/regulatory-genomics/star-aligner", rev = "e80f886635e323e97648fd38b0d5991f996b80c2" }
glob = "0.3"
itertools = "0.13"
noodles = { version = "0.85", features = ["core", "fastq", "bam", "sam", "bgzf"] }
seqspec = { workspace = true }
serde_yaml = "0.9"
termtree = "0.5"
precellar = { workspace = true }
regex = "1.6"
rayon = "1.10"
log = "0.4"
env_logger = "0.11"
url = "2.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
futures = "0.3"
rand = "0.8"
serde_json = "1.0"
indicatif = "0.17"

[dependencies.pyo3]
version = "0.24"
features = ["extension-module", "anyhow"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = {version = "0.6", features = ["disable_initial_exec_tls"]}