[package]
name = "precellar-py"
version = "0.5.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "precellar"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
bstr = "1.12"
bwa-mem2 = { git = "https://github.com/regulatory-genomics/bwa-mem2-rust.git", rev = "27a375ec2239c79e8b3dafc504c1e197832a27bf" }
star-aligner = { git = "https://github.com/regulatory-genomics/star-aligner", rev = "ff62b1d7d6ccbade4396398960ffcb1eb3d629e7" }
minimap2 = { git = "https://github.com/PPSherry/minimap2-rs.git", branch = "feature/paired-end-support" }
glob = "0.3"
itertools = "0.14"
noodles = { version = "0.101", features = ["core", "fastq", "bam", "sam", "bgzf"] }
seqspec = { workspace = true }
serde_yaml = "0.9"
termtree = "0.5"
precellar = { workspace = true }
regex = "1.11"
rayon = "1.10"
tempfile = "3"
log = "0.4"
env_logger = "0.11"
url = "2.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
futures = "0.3"
rand = "0.8"
serde_json = "1.0"
indicatif = "0.18"

[dependencies.pyo3]
version = "0.27"
features = ["extension-module", "anyhow"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = {version = "0.6", features = ["disable_initial_exec_tls"]}