[package]
name = "seqspec"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
cached-path = "0.6"
flate2 = "1.0"
indexmap = "2.5"
log = "0.4"
hamming = "0.1"
noodles = { version = "0.80", features = ["core", "fastq", "async"] }
reqwest = { version = "0.12", features = ["blocking"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9"
zstd = { version = "0.13", features = ["zstdmt"] }
multi_reader = "0.1"