[package]
name = "seqspec"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base16ct = { version = "0.2", features = ["alloc"] }
file-download = { git = "https://github.com/regulatory-genomics/file-download", rev = "2c41ff28d45c39edc73e144f00255476194ffc9b" }
flate2 = "1.1"
indexmap = "2.11"
log = "0.4"
home = "0.5"
itertools = "0.14"
md-5 = "0.10"
noodles = { version = "0.101", features = ["core", "fastq", "async"] }
url = "2.5"
reqwest = { version = "0.12", features = ["stream", "blocking"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9"
zstd = { version = "0.13", features = ["zstdmt"] }
multi_reader = "0.1"
tokio = "1.41"
tokio-util = "0.7"
futures = "0.3"
async-compression = { version = "0.4", features = ["gzip", "zstd", "tokio"] }